HEAD
	+ Bugfix: Escape some files to make download client bundle work
	  again if the server name has spaces
	+ Bugfix: Escape some files to allow spaces in server names
	+ Make initializeInterfaces() public
1.5
	+ Make changes to work with /etc/init upstart
1.3.15
	+ Set a respawn limit when the client is internal
1.3.14
	+ Remove migration scripts
1.3.13
	+ Usability enhancements. Configure automatically network address and port
	  and also create a server certificate and advertise local networks.
	  (Closes #1628)
	+ Keep folder open
	+ VPN adddress cannot be the same of any exposed network and viceversa
1.3.12
	+ Add breadcrumbs
1.3.11
	+ Added report support
1.3.10
	+ Changed name of AdvertisedNetworks model to ExposedNetworks to
	  avoid problems with ad-blockers. However we preserve the old
	  directory name to avoid more migrations, it seems that this not
	  triggers ad-blockers. If later we found that it triggers we will
	  have to use other directory and add a migration script.
1.3.6
	+ Upgraded windows installer, now we use 2.1 (previously was 2.0.9)
	+ Add "configuration" field to Client model to select manual  or
	  bundle configuration mode
	+ Bugfix: bundle configuration mode works again
	+ Bugfix: windows bundle works again
	+ DownloadClient bundle form is only showed when server
	  configuration is complete
1.3.4
	+ tableInfo returns an array of hash refs
1.1.20
	+ Bugfix: Allow VPN clients with spaces in its common name
	+ Enable/disable rip password depending on eBox-to-eBox conf
	+ Bugfix: fixed bug in interface number when number >= 10
1.1
	+ Show status for non-internal VPN daemons in dashboard
	+ Using EBox::Types::Text::WriteOnce instead of EBox::Types::OpenVPN::WriteOnceText
	+ Use the new rows() and ids() API
0.12.100
	+ Daemon names are restricted to alphanumerics and '-'. '_', '.'
	  characters
	+ Bugfix: servers and clients cannto get any longer the same
	interface number
	+ Added log rotation using logrotate
0.12.99
	+ New release
0.12